# rob521-labs

./: .gitignore  README.md
lab1/nodes/: l1_motor.py  l1_odometry.py  publisher.py  subscriber.py
lab2/: lab_2_report.md  pyproject.toml  shortest_path.npy  tasks.md  test_l2_planning.py
lab2/maps/: myhal.yaml  willowgarageworld_05res.yaml
lab2/nodes/: l2_follow_path.py  l2_follow_path_2.py  l2_follow_path_3.py  l2_follow_path_myhal.py  l2_planning.py  l2_planning_remote.py  note.txt  path.npy  pygame_utils_custom.py  utils.py
lab2/tests/: test_l2_planning.py
lab3/: lab_3_report.md
lab3/nodes/: l3_estimate_robot_motion.py  l3_estimate_wheel_baseline.py  l3_estimate_wheel_radius.py  l3_mapping.py
lab4/: lab_4_report.md
